plugins {
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.7'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '2.0.1'
}

repositories {
    mavenCentral()
}

javafx {
    modules = ["javafx.controls", "javafx.fxml"]
}


group 'CS'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.11


dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile 'org.testfx:testfx-junit:4.0+'
    testCompile "org.testfx:openjfx-monocle:jdk-11+26"
    compile "org.openjfx:javafx-graphics:11.0.1:win"
}

run.doFirst {
    environment "PATH", "C:\\Program Files (x86)\\Python37-32\\Scripts\\;C:\\Program Files (x86)\\Python37-32\\;C:\\Program Files (x86)\\Java\\jdk-11.0.1;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\Program Files (x86)\\Windows Live\\Shared;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Users\\h1710074\\AppData\\Local\\Microsoft\\WindowsApps;"
}
shadowJar {
    baseName = 'pa1'
}

test {
    compileClassPath +=  
    jvmArgs(
            '--add-exports=javafx.graphics/com.sun.javafx.application=org.testfx',
            '--add-exports=javafx.graphics/com.sun.glass.ui=org.testfx.monocle',
            '--add-exports=main/application=javafx.fxml',
            '--add-opens=main/application=javafx.fxml',
            '--add-opens=javafx.graphics/com.sun.glass.ui=org.testfx'
    )
//    scanForTestClasses = false
    include "**/*Test.class"
    exclude "**/DemoTest*"
}

mainClassName = "application.Main"
